@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version:
+Date:
+  Features:
+    - Add setting to customize robot by craft recipe.
+---------------------------------------------------------------------------------------------------
 Version: 0.9.3
 Date: 12. 03. 2022
   Bugfixes:
